# test_extern_fn_generator

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/wrappers/include/: registration.h
