[package]
name = "test_extern_fn_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
extern_fn_generator = { path ="../extern_fn_generator" }
tokio = { version = "1.37.0", features = ["rt"] }